--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,14 @@
-<p>header works!</p>
+<header>
+  <div class="container">
+  <div class="container-titulos">
+  <div class="container-titulo">
+    <h1 class="titulo">Visualiza el precio de las criptomonedas</h1>
+  </div>
+  <h2 class="subtitulo">
+    Conoce en todo momento el valor de las monedas digitales mas populares del
+    mundo
+  </h2>
+  </div>
+  <img src="../../../assets/Cripto-header.png" alt="" class="img-header" />
+</div>
+</header>
