terminado header y body

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,10 @@
 <header>
   <div class="container">
   <div class="container-titulos">
-  <div class="container-titulo">
-    <h1 class="titulo">Visualiza el precio de las criptomonedas</h1>
+  <div class="container-titulo ">
+    <h1 class="titulo slide-in smooth-color-change">Visualiza el precio de las criptomonedas</h1>
   </div>
-  <h2 class="subtitulo">
+  <h2 class="subtitulo slide-in">
     Conoce en todo momento el valor de las monedas digitales mas populares del
     mundo
   </h2>
@@ -12,3 +12,4 @@
   <img src="../../../assets/Cripto-header.png" alt="" class="img-header" />
 </div>
 </header>
+
