--- a/src/app/components/tabla-precios/tabla-precios.component.html
+++ b/src/app/components/tabla-precios/tabla-precios.component.html
@@ -18,17 +18,17 @@
   </mat-form-field>
 
   <!--? Tabla de precios  -->
-  <table mat-table [dataSource]="dataFilter"  class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataFilter"  class="mat-elevation-z8 ">
     <!-- Coin Column -->
     <ng-container matColumnDef="image">
-      <th mat-header-cell *matHeaderCellDef>Nombre</th>
+      <th mat-header-cell class="tabla-header" *matHeaderCellDef>Nombre</th>
       <td mat-cell *matCellDef="let element">
         <img [src]="element.image" alt="{{ element.name }}" />
       </td>
     </ng-container>
     <!-- Coin Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef></th>
+      <th mat-header-cell class="tabla-header" *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
         <span class="symbol">{{ element.symbol | uppercase }} </span>
         <span class="name">{{ element.name }}</span>
@@ -37,7 +37,7 @@
 
     <!-- Precio Column -->
     <ng-container matColumnDef="current_price">
-      <th mat-header-cell *matHeaderCellDef>Precio</th>
+      <th mat-header-cell class="tabla-header" *matHeaderCellDef>Precio</th>
       <td mat-cell *matCellDef="let element" class="numeros">
         ${{ element.current_price }}
       </td>
@@ -45,7 +45,7 @@
 
     <!-- Cambio de Precio Column -->
     <ng-container matColumnDef="price_change_percentage_24h">
-      <th mat-header-cell *matHeaderCellDef>Cambio de precio</th>
+      <th mat-header-cell class="tabla-header" *matHeaderCellDef>Cambio de precio</th>
       <td
         mat-cell
         *matCellDef="let element"
@@ -57,7 +57,7 @@
 
     <!-- Volumen totalColumn -->
     <ng-container matColumnDef="total_volume">
-      <th mat-header-cell *matHeaderCellDef>Volumen en 24hs</th>
+      <th mat-header-cell class="tabla-header" *matHeaderCellDef>Volumen en 24hs</th>
       <td mat-cell *matCellDef="let element" class="numeros">
         {{ element.total_volume | number : ".0" }}M
       </td>
