--- a/src/app/pages/home-page-component/home-page-component.component.html
+++ b/src/app/pages/home-page-component/home-page-component.component.html
@@ -1,4 +1,7 @@
 <app-header></app-header>
 <div class="container">
-<!-- <app-tabla-precios></app-tabla-precios> -->
+  <div class="container-titulo">
+  <h3>#Tabla de precios</h3>
+  </div>
+  <app-tabla-precios></app-tabla-precios>
 </div>
