--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap');
+
 header {
   width: 100%;
   height: 760px;
+  //TODO:Optimizar imagenes 
+   background-image: url(../../../assets/fondo2.png) ;
+   background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover; 
+  box-shadow: 0 1px 11px 3px rgba(4, 4, 4, 0.4);
 }
 
 .container {
@@ -10,7 +18,8 @@ header {
   padding: 35px 120px;
   justify-content: space-evenly;
   align-items: flex-start;
-  //gap: 50px;
+
+
 }
 
 .container-titulos {
@@ -18,7 +27,8 @@ header {
   flex-direction: column;
   width: 800px;
   padding-top: 80px;
-  gap: 25px;
+  gap: 45px;
+  cursor: default;
 }
 
 .container-titulo {
@@ -27,16 +37,56 @@ header {
 }
 
 .titulo {
-  font-size: 110px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 900;
+  font-size: 120px;
   line-height: 130px;
   letter-spacing: -2px;
   text-align: left;
   margin: 0;
+  color: rgb(0, 0, 28);
+
+}
+
+
+.slide-in {
+  transform: translateY(-50px);
+  animation: slide-in 2s forwards;
+}
+
+@keyframes slide-in {
+  to {
+    transform: translateY(0);
+  }
+}
+
+.subtitulo{
+  color: rgb(0, 0, 28);
+
+}
+
+@keyframes moveUpAndDown {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-15px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .img-header {
   width: 406px;
   height: 669px;
+  animation: moveUpAndDown 3s ease-in-out infinite;
+  //animation: Bounce 1s alternate infinite;
 }
 
 //.subtitulo {}
+
+
+
+
+
