--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,12 +2,28 @@
 //? import font
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html,
 body {
   height: 100%;
   margin: 0;
   font-family: "Inter", sans-serif !important;
-  background-image: linear-gradient(34deg, #74ebd5 0%, #9fe6a5 100%);
+  
+
+ //background: linear-gradient(to left, #74ebd5, #9fe6a5);
+ //background: linear-gradient(to left, #00b8d4, #00bfa5);
+background-color: rgb(29, 29, 69);
+
+
+
+
+
 }
 
 .font1 {
