add responsive mode

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,4 +4,9 @@
     <p class="texto-footer">Accede al repositorio del proyecto: </p>
     <a href="https://github.com/matiaslenci/precios-cryptomonedas" target="_blank" class="enlace-github">https://github.com/matiaslenci/precios-cryptomonedas</a>
   </div>
+  <div class="enlace-responsive">
+    <a href="https://github.com/matiaslenci/precios-cryptomonedas" target="_blank">
+    <img src="../../../assets/bxl-github.png" alt="enlace al repositorio en github" class="logo-github-responsive"/>
+  </a>
+  </div>
 </footer>
