--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
-<header>
-  <div class="container">
+<header class="header">
+  <div class="container-header">
   <div class="container-titulos">
   <div class="container-titulo ">
     <h1 class="titulo slide-in smooth-color-change">Visualiza el precio de las criptomonedas</h1>
