--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,25 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap");
 
-header {
+.header {
   width: 100%;
   height: 760px;
-  //TODO:Optimizar imagenes 
-   background-image: url(../../../assets/fondo2.png) ;
-   background-attachment: fixed;
+  //TODO:Optimizar imagenes
+  background-image: url(../../../assets/fondo2.png);
+  background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size: cover; 
+  background-size: cover;
   box-shadow: 0 1px 11px 3px rgba(4, 4, 4, 0.4);
 }
 
-.container {
+.container-header {
   display: flex;
   flex-direction: row;
   padding: 35px 120px;
   justify-content: space-evenly;
   align-items: flex-start;
-
-
 }
 
 .container-titulos {
@@ -37,7 +35,7 @@ header {
 }
 
 .titulo {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 900;
   font-size: 120px;
   line-height: 130px;
@@ -45,9 +43,8 @@ header {
   text-align: left;
   margin: 0;
   color: rgb(0, 0, 28);
-
+  text-shadow: 2px 2px 4px #171738;
 }
-
 
 .slide-in {
   transform: translateY(-50px);
@@ -60,9 +57,8 @@ header {
   }
 }
 
-.subtitulo{
+.subtitulo {
   color: rgb(0, 0, 28);
-
 }
 
 @keyframes moveUpAndDown {
@@ -81,12 +77,69 @@ header {
   width: 406px;
   height: 669px;
   animation: moveUpAndDown 3s ease-in-out infinite;
-  //animation: Bounce 1s alternate infinite;
 }
 
 //.subtitulo {}
 
+//! RESPONSIVE
+
+/* TABLET */
+@media (max-width: 990px) {
+  .header {
+    height: 1330px;
+  }
+
+  .container-header {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: center;
+  }
+
+  .container-titulos{
+    padding-top: 40px;
+  }
 
 
+}
+/* CELULAR */
+@media (max-width: 820px) {
 
+.container-header{
+  padding: 0px ;
+}
 
+  .header {
+    height: 820px;
+    padding: 0px;
+  }
+
+  .img-header {
+    width: 250px;
+    height: 369px;
+  }
+
+  .container-titulos{
+    width: auto;
+    gap:0px;
+    padding: 30px 30px 0px 30px;
+  }
+
+  .container-titulo {
+    height: 200px;
+    width: auto;
+  }
+
+  .titulo{
+    font-size: 50px;
+    width: auto;
+    line-height: 70px;
+    letter-spacing: 0px;
+  }
+
+  .subtitulo{
+    font-size: 20px;
+    padding:40px 0px;
+  }
+}
