--- a/src/app/components/tabla-precios/tabla-precios.component.html
+++ b/src/app/components/tabla-precios/tabla-precios.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-tabla-precios">
   <!--? Filtro  -->
   <mat-form-field class="example-form-field">
     <mat-label class="label"
@@ -16,9 +16,8 @@
       <mat-icon>close</mat-icon>
     </button>
   </mat-form-field>
-
   <!--? Tabla de precios  -->
-  <table mat-table [dataSource]="dataFilter"  class="mat-elevation-z8 ">
+  <table mat-table [dataSource]="dataFilter"  class="mat-elevation-z8 tabla-escritorio">
     <!-- Coin Column -->
     <ng-container matColumnDef="image">
       <th mat-header-cell class="tabla-header" *matHeaderCellDef>Nombre</th>
@@ -29,7 +28,7 @@
     <!-- Coin Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell class="tabla-header" *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element">
+      <td  mat-cell *matCellDef="let element">
         <span class="symbol">{{ element.symbol | uppercase }} </span>
         <span class="name">{{ element.name }}</span>
       </td>
@@ -65,6 +64,92 @@
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
+  <!--? Tabla de precios RESPONSIVE  -->
+  <table mat-table [dataSource]="dataFilter"  class="mat-elevation-z8 tabla-responsive">
+    <!-- Coin Column -->
+     <ng-container matColumnDef="image">
+      <th mat-header-cell class="tabla-header" *matHeaderCellDef>Nombre</th>
+      <td mat-cell *matCellDef="let element">
+        <img [src]="element.image" alt="{{ element.name }}" />
+      </td>
+    </ng-container> 
+    <!-- Coin Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell class="tabla-header" *matHeaderCellDef></th>
+      <td mat-cell class="tabla-row" *matCellDef="let element">
+        <span class="symbol">{{ element.symbol | uppercase }} </span>
+        <span class="name">{{ element.name }}</span>
+      </td>
+    </ng-container>
+
+    <!-- Precio Column -->
+    <ng-container matColumnDef="current_price">
+      <th mat-header-cell class="tabla-header" *matHeaderCellDef>Precio</th>
+      <td mat-cell *matCellDef="let element" class="numeros">
+        ${{ element.current_price }}
+      </td>
+    </ng-container>
+
+    <!-- Cambio de Precio Column -->
+    <ng-container matColumnDef="price_change_percentage_24h">
+      <th mat-header-cell class="tabla-header" *matHeaderCellDef>Cambio de precio</th>
+      <td
+        mat-cell
+        *matCellDef="let element"
+        [ngClass]="element.price_change_percentage_24h > 0 ? 'verde' : 'rojo'"
+      >
+        {{ element.price_change_percentage_24h | number : ".2-2" }}%
+      </td>
+    </ng-container>
+
+    <!-- Volumen totalColumn -->
+<!--     <ng-container matColumnDef="total_volume">
+      <th mat-header-cell class="tabla-header" *matHeaderCellDef>Volumen en 24hs</th>
+      <td mat-cell *matCellDef="let element" class="numeros">
+        {{ element.total_volume | number : ".0" }}M
+      </td>
+    </ng-container> -->
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumnsRes"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumnsRes"></tr>
   </table>
 
   <ng-container *ngIf="dataSource.length === 0">
