--- a/src/app/components/tabla-precios/tabla-precios.component.scss
+++ b/src/app/components/tabla-precios/tabla-precios.component.scss
@@ -1,5 +1,5 @@
 /* Structure */
-.container {
+.container-tabla-precios {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -62,4 +62,56 @@ table {
 .rojo {
   font-weight: 500;
   color: #cf304a;
+}
+
+.tabla-responsive {
+  display: none;
+}
+
+//! RESPONSIVE
+
+/* TABLET */
+@media (max-width: 990px) {
+  container-tabla-precios{
+    margin-top: 0px;
+    padding: 0px;
+  }
+
+
+}
+/* CELULAR */
+@media (max-width: 820px) {
+
+  .container-tabla-precios{
+    padding: 0px;
+  }
+
+
+  table{
+    width: auto;
+  }
+
+  .tabla-escritorio{
+    display: none;
+  }
+
+.tabla-responsive{
+  display: inline;
+}
+
+  container-tabla-precios{
+    margin-top: 0px;
+    padding: 0px;
+  }
+
+
+
+
+  .tabla-row{
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding-right: 0px;
+height: 52px;
+  }
 }
