--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 760px;
   //TODO:Optimizar imagenes
-  background-image: url(../../../assets/fondo2.png);
+  background-image: url(../../../assets/fondo2.jpg);
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
