--- a/src/app/components/tabla-precios/tabla-precios.component.scss
+++ b/src/app/components/tabla-precios/tabla-precios.component.scss
@@ -112,6 +112,7 @@ display: flex;
 flex-direction: column;
 align-items: flex-start;
 padding-right: 0px;
+padding-bottom: 63px;
 height: 52px;
   }
 }
