add notfoundpage and fix readme

--- a/src/app/pages/not-found-page-component/not-found-page-component.component.html
+++ b/src/app/pages/not-found-page-component/not-found-page-component.component.html
@@ -1,1 +1,5 @@
-<p>not-found-page-component works!</p>
+<div class="container-404">
+  <h1>#Error 404</h1>
+  <p>Página no encontrada</p>
+  <button  mat-raised-button color="primary" [routerLink]="'/home'">Volver al inicio</button>
+</div>
